# m-labs-artiq

./: .gitignore  MANIFEST.in  RELEASE_NOTES.rst  add-llvm.sh  before_poetry_build.py  before_poetry_build.sh  flake.nix  pyproject.toml  pytest.ini  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: package.yml  pull.yml  test.yml
artiq/: _version.py  _version.py.template  consts.py  display_tools.py  queue_tools.py  schedule_display.py  tools.py
artiq/applets/: simple.py
artiq/compiler/: embedding.py  module.py  targets.py
artiq/compiler/testbench/: inferencer.py
artiq/coredevice/: ad9910.py  comm_analyzer.py  comm_kernel.py  core.py  phaser.py  suservo.py  urukul.py
artiq/dashboard/: experiments.py  explorer.py  local_worker_manager.py  moninj.py  quick_open_dialog.py  schedule.py  status.py  worker_managers.py
artiq/firmware/: Cargo.toml
artiq/firmware/libboard_artiq/: drp.rs  eyescan.rs  lib.rs
artiq/firmware/libboard_misoc/: uart.rs
artiq/firmware/runtime/: kern_hwreq.rs  main.rs  mgmt.rs  moninj.rs  rtio_mgt.rs  sched.rs  session.rs
artiq/firmware/satman/: main.rs
artiq/frontend/: artiq_browser.py  artiq_client.py  artiq_dashboard.py  artiq_flash.py  artiq_master.py  artiq_worker_manager.py
artiq/gateware/: eem.py
artiq/gateware/drtio/transceiver/: drp.py  gtp_7series.py
artiq/gateware/rtio/phy/: servo.py
artiq/gateware/suservo/: dds_ser.py  iir.py  pads.py
artiq/gateware/targets/: kasli.py
artiq/gateware/test/suservo/: test_dds.py  test_servo.py
artiq/gui/: applets.py  fuzzy_select.py  log.py  models.py  state.py
artiq/language/: environment.py  units.py
artiq/master/: databases.py  experiments.py  log.py  results.py  scheduler.py  worker.py  worker_db.py  worker_impl.py  worker_managers.py  worker_transport.py
artiq/test/: conftest.py  consts.py  helpers.py  test_experiments.py  test_frontends.py  test_results.py  test_scheduler.py  test_worker.py  test_worker_manager_integration.py
artiq/test_tools/: __init__.py  experiment.py  experiment_plugin.py  thread_pipe_ipc.py  thread_worker_transport.py
artiq/worker_manager/: logging.py  worker_manager.py
doc/manual/: default_network_ports.rst  sandboxing.rst
