[tool.poetry]
name = "artiq"
version = "7.0.0-dev"
description = "Advanced Real-Time Infrastructure for Quantum physics"
authors = ["M-Labs"]
license = "GPL v3"
include = [
    "artiq/gui/logo*.svg",
    "versioneer.py",
    "artiq/_version.py",
    "artiq/coredevice/coredevice_generic.schema.json",
    "artiq/compiler/kernel.ld",
    "artiq/firmware",
    "artiq/examples",
]

[[tool.poetry.source]]
name = "oxionics"
url = "http://server-linux-0:3141/oiuser/oxionics/+simple/"
default = true

[tool.poetry.scripts]
artiq_client = "artiq.frontend.artiq_client:main"
artiq_compile = "artiq.frontend.artiq_compile:main"
artiq_coreanalyzer = "artiq.frontend.artiq_coreanalyzer:main"
artiq_coremgmt = "artiq.frontend.artiq_coremgmt:main"
artiq_ddb_template = "artiq.frontend.artiq_ddb_template:main"
artiq_master = "artiq.frontend.artiq_master:main"
artiq_mkfs = "artiq.frontend.artiq_mkfs:main"
artiq_rtiomon = "artiq.frontend.artiq_rtiomon:main"
artiq_sinara_tester = "artiq.frontend.artiq_sinara_tester:main"
artiq_session = "artiq.frontend.artiq_session:main"
artiq_route = "artiq.frontend.artiq_route:main"
artiq_run = "artiq.frontend.artiq_run:main"
artiq_flash = "artiq.frontend.artiq_flash:main"
aqctl_corelog = "artiq.frontend.aqctl_corelog:main"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.4"
scipy = "^1.7.3"
python-dateutil = "^2.8.2"
prettytable = "^2.4.0"
h5py = "^3.6.0"
qasync = "^0.22.0"
pyqtgraph = "^0.12.3"
pygit2 = "^1.7.1"
pythonparser = "^1.3"
python-levenshtein = "^0.12.2"
pyqt5 = "5.12"
migen = "^0.9.2"
misoc = "^0.12"
jsonschema = "^4.2.1"
sipyco = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
